Remove height property from social media icons in footer to prevent them breaking out of the box

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -455,7 +455,6 @@ textarea {
 footer {
     padding: 0;
     margin: 0;
-    height: 100px;
     width: 100%;
     bottom: 0;
 }
